# rust-web-server-template

./: Cargo.toml  LICENSE  README.md  bootstrap-server.sh  package.json  tailwind.config.js  toDo.md
.github/workflows/: audit-on-push.yml  general.yml  scheduled-workflow.yml
db/: database.db
lib/: lib.rs
public/: styles.css
src/: lib.rs  main.rs  startup.rs
src/models/: user.rs
src/routes/: contact.rs  health_check.rs  index.rs  mod.rs
src/routes/newsletter/: subscriptions.rs
src/routes/user/: login.rs  mod.rs  register.rs  welcome.rs
src/views/: base.html  index.html
src/views/sections/: footer.html  header.html
static/: evolving.js  styles.css
templates/: base.html.tera  contact.html.tera  index.html.tera  login.html.tera  welcome.tera.html
templates/sections/: contact-grid.html.tera  contact-section.html.tera  feature-section-w-screenshot.html.tera  footer.html.tera  header.html.tera
templates/sections/components/: navbar.html.tera
tests/: health_check.rs
