[package]
name = "rust-web-server-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
chrono = "0.4.5"
random-string = "1.0.0"
env_logger = "0.9.0"
local-ip-address = "0.4.7"
futures = "0.3.23"
dotenv = "0.15.0"