[package]
name = "rust_web"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention 
# We could specify a library name using the ` name ` field. If unspecified, 
# cargo will default to ` package.name `, which is what we want. 
path = "src/lib.rs"

[[bin]]

path = "src/main.rs"
name = "rust_web"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-files = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
random-string = "1.0.0"
env_logger = "0.10.0"
local-ip-address = "0.5.0"
futures = "0.3.23"
libsqlite3-sys = "0.25.2"
rusqlite = "0.28.0"
tera = "1.17.1"
actix-web-lab = "0.18.8"
actix-session = "0.7.2"
reqwest = "0.11"
