[package]
name = "rust_web"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention 
# We could specify a library name using the ` name ` field. If unspecified, 
# cargo will default to ` package.name `, which is what we want. 
path = "src/lib.rs"

[[bin]]

path = "src/main.rs"
name = "rust_web"

[dependencies]
rocket = "0.5.0-rc.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
random-string = "1.0.0"
env_logger = "0.10.0"
local-ip-address = "0.5.0"
futures = "0.3.23"
tera = "1.17.1"
reqwest = "0.11"
rocket_dyn_templates = {version = "0.1.0-rc.2", features = ["tera"]}


[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "offline", "migrate"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]
